--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,4 +1,6 @@
-promptflow[azure]
+promptflow[azure]==0.1.0b8.dev6
+--extra-index-url https://azuremlsdktestpypi.azureedge.net/promptflow/
+
 promptflow-tools==0.1.0.b5
 python-dotenv
 bs4
