--- a/.github/workflows/samples_connections_connection.yml
+++ b/.github/workflows/samples_connections_connection.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/connections/**, examples/*requirements.txt, .github/workflows/samples_connections_connection.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_notebook_ci:
     runs-on: ubuntu-latest
