--- a/.github/workflows/samples_flows_chat_chat_with_wikipedia.yml
+++ b/.github/workflows/samples_flows_chat_chat_with_wikipedia.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/flows/chat/chat-with-wikipedia/**, examples/*requirements.txt, .github/workflows/samples_flows_chat_chat_with_wikipedia.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
