--- a/.github/workflows/samples_flows_standard_autonomous_agent.yml
+++ b/.github/workflows/samples_flows_standard_autonomous_agent.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/flows/standard/autonomous-agent/**, examples/*requirements.txt, .github/workflows/samples_flows_standard_autonomous_agent.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
