--- a/.github/workflows/samples_flows_standard_basic_with_builtin_llm.yml
+++ b/.github/workflows/samples_flows_standard_basic_with_builtin_llm.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/flows/standard/basic-with-builtin-llm/**, examples/*requirements.txt, .github/workflows/samples_flows_standard_basic_with_builtin_llm.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
