--- a/.github/workflows/samples_flows_standard_conditional_flow_for_switch.yml
+++ b/.github/workflows/samples_flows_standard_conditional_flow_for_switch.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/flows/standard/conditional-flow-for-switch/**, examples/*requirements.txt, .github/workflows/samples_flows_standard_conditional_flow_for_switch.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
