--- a/.github/workflows/samples_tools_use_cases_flow_with_enabled_by_value.yml
+++ b/.github/workflows/samples_tools_use_cases_flow_with_enabled_by_value.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/tools/use-cases/flow-with-enabled-by-value/**, examples/*requirements.txt, .github/workflows/samples_tools_use_cases_flow_with_enabled_by_value.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
