--- a/.github/workflows/promptflow-replay-test.yml
+++ b/.github/workflows/promptflow-replay-test.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Display and Set Environment Variables
       run: |
         export pyVersion="3.9";
@@ -52,7 +52,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Display and Set Environment Variables
       run: |
         export pyVersion="3.9";
@@ -92,9 +92,6 @@ jobs:
         gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]"}}
         gci ./promptflow-tools -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install $_.FullName}}
         pip freeze
-    - name: Get number of CPU cores
-      uses: SimenB/github-actions-cpu-cores@v1
-      id: cpu-cores
     - name: Run Test
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
@@ -102,4 +99,37 @@ jobs:
         gci env:* | sort-object name
         $env:PYTHONPATH=""
         echo '{}' > ${{ github.workspace }}/src/promptflow/connections.json
-        pytest ./tests/sdk_cli_test/ -n auto --dist loadfile
+        python "../../scripts/building/run_coverage_tests.py" `
+        -p promptflow `
+        -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test `
+        -l eastus `
+        -m "unittest or e2etest" `
+        --coverage-config ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/.coveragerc
+    - name: Upload Test Results
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: Test Results (Python ${{ steps.display_env.outputs.pyVersion }}) (OS ${{ matrix.os }})
+        path: |
+          ${{ env.testWorkingDirectory }}/*.xml
+          ${{ env.testWorkingDirectory }}/htmlcov/
+
+  publish-test-results:
+    name: "Publish Tests Results"
+    needs: sdk_cli_tests
+    runs-on: ubuntu-latest
+    permissions: write-all
+    if: always()
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+    - name: Publish Test Results
+      uses: "./.github/actions/step_publish_test_results"
+      with:
+        testActionFileName: promptflow-sdk-cli-test.yml
+        testResultTitle: SDK CLI Test Result
+        osVersion: ubuntu-latest
+        pythonVersion: 3.9
+        coverageThreshold: 40
+        token: ${{ secrets.GITHUB_TOKEN }}
+        context: test/sdk_cli
