update custom yml
update

update

--- a/examples/tools/use-cases/custom_llm_tool_showcase/custom_connection.yml
+++ b/examples/tools/use-cases/custom_llm_tool_showcase/custom_connection.yml
@@ -2,8 +2,6 @@ $schema: https://azuremlschemas.azureedge.net/promptflow/latest/CustomConnection
 name: basic_custom_connection
 type: custom
 configs:
-  api_type: azure
-  api_version: 2023-03-15-preview
-  api_base: https://<to-be-replaced>.openai.azure.com/
+  api_base: <to-be-replaced>
 secrets:  # must-have
   api_key: <to-be-replaced>
