--- a/.github/workflows/promptflow-replay-test.yml
+++ b/.github/workflows/promptflow-replay-test.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - src/promptflow/**
       - scripts/**
+      - .github/workflows/promptflow-replay-test.yml
   workflow_dispatch:
 env:
   testWorkingDirectory: ${{ github.workspace }}/src/promptflow
@@ -73,22 +74,7 @@ jobs:
       working-directory: artifacts
       run: |
         Set-PSDebug -Trace 1
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools
-        python -m pip install --upgrade nox
-        python -m pip install --upgrade mock
-        python -m pip install --upgrade pytest-cov
-        python -m pip install --upgrade coverage==6.0.1
-        python -m pip install --upgrade pytest-forked
-        python -m pip install --upgrade pytest-xdist
-        python -m pip install --upgrade pytest-timeout
-        python -m pip install --upgrade pytest-mock
-        python -m pip install --upgrade pytest-nunit
-        python -m pip install --upgrade pytest
-        python -m pip install --upgrade pydash
-        python -m pip install --upgrade wheel
-        python -m pip install --upgrade keyrings.alt
-        python -m pip install --upgrade beautifulsoup4==4.12.2
+        pip install -r ${{ github.workspace }}/src/promptflow/dev_requirements.txt
         gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]"}}
         gci ./promptflow-tools -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install $_.FullName}}
         pip freeze
@@ -105,31 +91,4 @@ jobs:
         -l eastus `
         -m "unittest or e2etest" `
         --coverage-config ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/.coveragerc
-    - name: Upload Test Results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: Test Results (Python ${{ steps.display_env.outputs.pyVersion }}) (OS ${{ matrix.os }})
-        path: |
-          ${{ env.testWorkingDirectory }}/*.xml
-          ${{ env.testWorkingDirectory }}/htmlcov/
 
-  publish-test-results:
-    name: "Publish Tests Results"
-    needs: sdk_cli_tests
-    runs-on: ubuntu-latest
-    permissions: write-all
-    if: always()
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4
-    - name: Publish Test Results
-      uses: "./.github/actions/step_publish_test_results"
-      with:
-        testActionFileName: promptflow-sdk-cli-test.yml
-        testResultTitle: SDK CLI Test Result
-        osVersion: ubuntu-latest
-        pythonVersion: 3.9
-        coverageThreshold: 40
-        token: ${{ secrets.GITHUB_TOKEN }}
-        context: test/sdk_cli
