--- a/src/promptflow-tools/tests/pytest.ini
+++ b/src/promptflow-tools/tests/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 markers =
-    skip_if_no_key: skip the test if actual api key is not provided.
+    skip_if_no_api_key: skip the test if actual api key is not provided.
