Move flow with custom strong type connection tool and flow with cascading inputs tool to use-cases folder (#921)
# Description

Move flow with custom strong type connection tool and flow with
cascading inputs tool to use-cases folder.

**Flow Tests:** Run the flow tests with promptflow version 0.1.0b8

![image](https://github.com/microsoft/promptflow/assets/75061414/ae2c0021-ebd2-40d7-af3f-38c43474233d)


# All Promptflow Contribution checklist:
- [x] **The pull request does not introduce [breaking changes].**
- [x] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [x] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [x] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [x] Title of the pull request is clear and informative.
- [x] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [x] Pull request includes test coverage for the included changes.

---------

Co-authored-by: yalu4 <yalu4@microsoft.com>
Co-authored-by: cs_lucky <si.chen@microsoft.com>

--- a/examples/tools/use-cases/cascading-inputs-tool-showcase/flow.dag.yaml
+++ b/examples/tools/use-cases/cascading-inputs-tool-showcase/flow.dag.yaml
@@ -4,13 +4,13 @@ inputs: {}
 outputs:
   user_id:
     type: string
-    reference: ${Tool_with_Enabled_By_Value.output}
+    reference: ${Tool_with_Cascading_Inputs.output}
 nodes:
-- name: Tool_with_Enabled_By_Value
+- name: Tool_with_Cascading_Inputs
   type: python
   source:
     type: package
     tool: my_tool_package.tools.tool_with_enabled_by_value.my_tool
   inputs:
     user_type: student
-    student_id: "123"
+    student_id: "student_id"
