--- a/.github/workflows/samples_tools_use_cases_custom_llm_tool_showcase.yml
+++ b/.github/workflows/samples_tools_use_cases_custom_llm_tool_showcase.yml
@@ -12,10 +12,17 @@ on:
     paths: [ examples/tools/use-cases/custom_llm_tool_showcase/**, examples/*requirements.txt, .github/workflows/samples_tools_use_cases_custom_llm_tool_showcase.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup Python 3.9 environment
