--- a/.github/workflows/samples_flows_standard_maths_to_code.yml
+++ b/.github/workflows/samples_flows_standard_maths_to_code.yml
@@ -23,6 +23,12 @@ jobs:
         uses: jlumbroso/free-disk-space@main
         with:
           tool-cache: false
+          android: true
+          dotnet: false
+          haskell: true
+          large-packages: false
+          docker-images: true
+          swap-storage: true
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup Python 3.9 environment
