--- a/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
@@ -8,17 +8,29 @@ promptflow.tools.open_source_llm.OpenSourceLLM.call:
   function: call
   inputs:
     endpoint_name:
-      default: "-- please enter an endpoint name --"
       type:
       - string
+      dynamic_list:
+        func_path: promptflow.tools.open_source_llm.list_endpoint_names
+      allow_manual_entry: false
+      is_multi_select: false
     connection:
       default: null
       type:
       - CustomConnection
     deployment_name:
-      default: null
       type:
       - string
+      dynamic_list:
+        func_path: promptflow.tools.open_source_llm.list_deployment_names
+        func_kwargs:
+        - name: endpoint_name
+          type: 
+          - string
+          optional: true # need to understand if this is blocking or not on the manual entry.
+          reference: ${inputs.endpoint_name} 
+      allow_manual_entry: true
+      is_multi_select: false
     api:
       enum:
       - chat
