--- a/src/promptflow/tests/test_configs/flows/activate_condition_always_met/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/activate_condition_always_met/flow.dag.yaml
@@ -11,7 +11,7 @@ nodes:
   type: python
   source:
     type: code
-    path: nodeA.py
+    path: pass_through.py
   inputs:
     input1: ${inputs.text}
   activate:
@@ -21,7 +21,7 @@ nodes:
   type: python
   source:
     type: code
-    path: nodeB.py
+    path: pass_through.py
   inputs:
     input1: ${inputs.text}
   activate:
@@ -31,7 +31,7 @@ nodes:
   type: python
   source:
     type: code
-    path: nodeC.py
+    path: summary_result.py
   inputs:
     input1: ${nodeA.output}
     input2: ${nodeB.output}
