Update doc and test cases

--- a/src/promptflow/tests/test_configs/flows/activate_condition_always_met/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/activate_condition_always_met/flow.dag.yaml
@@ -36,5 +36,5 @@ nodes:
     input1: ${nodeA.output}
     input2: ${nodeB.output}
   activate:
-    when: true
-    is: true
+    when: dummy
+    is: dummy
