[Open_Source_LLM] Add Dynamic List Functionalities (#976)
# Description
Support dynamic list functionality to pick endpoint or custom connection
for open source llm tool.
Shoutout to @gjwoods for base implementation for this in
https://github.com/microsoft/promptflow/pull/843

![image](https://github.com/microsoft/promptflow/assets/75808410/68b218db-cb46-473a-82ce-824449d82506)


Please add an informative description that covers that changes made by
the pull request and link all relevant issues.

# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [x] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [x] Pull request includes test coverage for the included changes.

--- a/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
@@ -7,18 +7,26 @@ promptflow.tools.open_source_llm.OpenSourceLLM.call:
   class_name: OpenSourceLLM
   function: call
   inputs:
-    endpoint_name:
-      default: "-- please enter an endpoint name --"
+    endpoint:
       type:
       - string
-    connection:
-      default: null
-      type:
-      - CustomConnection
+      dynamic_list:
+        func_path: promptflow.tools.open_source_llm.list_endpoint_names
+      allow_manual_entry: false
+      is_multi_select: false
     deployment_name:
-      default: null
       type:
       - string
+      dynamic_list:
+        func_path: promptflow.tools.open_source_llm.list_deployment_names
+        func_kwargs:
+        - name: endpoint
+          type: 
+          - string
+          optional: true # need to understand if this is blocking or not on the manual entry.
+          reference: ${inputs.endpoint} 
+      allow_manual_entry: true
+      is_multi_select: false
     api:
       enum:
       - chat
