Support optional api_base for openai connection
Signed-off-by: Brynn Yin <biyi@microsoft.com>

--- a/src/promptflow/tests/test_configs/connections/openai_connection_api_base.yaml
+++ b/src/promptflow/tests/test_configs/connections/openai_connection_api_base.yaml
@@ -3,4 +3,4 @@ name: my_open_ai_connection
 type: open_ai
 api_key: "<to-be-replaced>"
 organization: "org"
-api_base: ""
+api_base: custom_api_base
