Fix: connection not correctly initialized in custom llm tool

--- a/src/promptflow/tests/executor/package_tools/custom_llm_tool/flow.dag.yaml
+++ b/src/promptflow/tests/executor/package_tools/custom_llm_tool/flow.dag.yaml
@@ -14,5 +14,6 @@ nodes:
     path: ./my_prompt.jinja2
   inputs:
     connection: azure_open_ai_connection
+    connection_2: azure_open_ai_connection
     api: completion
     text: ${inputs.text}
