--- a/.github/workflows/promptflow-replay-test.yml
+++ b/.github/workflows/promptflow-replay-test.yml
@@ -3,7 +3,8 @@ on:
   pull_request:
     paths:
       - src/promptflow/**
-      - scripts/**
+      - scripts/building/run_coverage_tests.py
+      - scripts/building/utils.py
       - .github/workflows/promptflow-replay-test.yml
   workflow_dispatch:
 env:
