--- a/.github/workflows/samples_flows_chat_chat_math_variant.yml
+++ b/.github/workflows/samples_flows_chat_chat_math_variant.yml
@@ -12,6 +12,9 @@ on:
     paths: [ examples/flows/chat/chat-math-variant/**, examples/*requirements.txt, .github/workflows/samples_flows_chat_chat_math_variant.yml ]
   workflow_dispatch:
 
+env:
+  IS_IN_CI_PIPELINE: "true"
+
 jobs:
   samples_readme_ci:
     runs-on: ubuntu-latest
@@ -23,11 +26,7 @@ jobs:
         with:
           python-version: "3.9"
       - name: Generate config.json
-<<<<<<< HEAD
-        run: echo ${{ secrets.TEST_WORKSPACE_CONFIG_JSON }} > ${{ github.workspace }}/examples/config.json
-=======
         run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ github.workspace }}/examples/config.json
->>>>>>> 48132db3dd247817428a3e032d8c3c9030c58e08
       - name: Prepare requirements
         working-directory: examples
         run: |
@@ -78,11 +77,7 @@ jobs:
           export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
           export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
           export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
-<<<<<<< HEAD
-          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME }}
-=======
           export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
->>>>>>> 48132db3dd247817428a3e032d8c3c9030c58e08
           bash bash_script.sh
       - name: Pip List for Debug
         if : ${{ always() }}
