remove id & name, replace with schema

--- a/scripts/runtime_mgmt/clean-disk-flow/flow.dag.yaml
+++ b/scripts/runtime_mgmt/clean-disk-flow/flow.dag.yaml
@@ -1,5 +1,4 @@
-id: clean_runtime_disk
-name: Clean runtime disk
+$schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json
 inputs:
   topic:
     type: string
